# grewtix

./: .gitignore  CODEOWNERS  COLLABORATION.md  Jenkinsfile  LICENSE  README.md  collaboration.md  db.sqlite3  maintest.py  manage.py  package.json  pyproject.toml  requirements.txt
Archived/: main.py
Archived/config/: dev.ini
Archived/objects/: Controller.py  TicketCounter.py
Archived/unit_tests/: test_TicketCounter.py
archive/: COLLABORATION.md  README.md  requirements.txt
archive/grewtix/grewtix/: settings.py  wsgi.py
archive/grewtix/tickets/: admin.py  tests.py  urls.py  views.py
config/: dev.ini  test.ini
grewtix/: COLLABORATION.md  README.md  asgi.py  manage.py  settings.py  urls.py  wsgi.py
grewtix/grewtix/: asgi.py  settings.py  urls.py
grewtix/grewtix/templates/: base.html  header.html
grewtix/templates/: header.html
grewtix/tickets/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
objects/: ConfigReader.py  Model.py  TicketCounter.py  config_file_create.py  view.py
tickets/: forms.py  models.py  urls.py  views.py
tickets/migrations/: 0001_initial.py
tickets/templates/: ticket_create.html  ticket_create_form.html  ticket_detail.html  ticket_display_queryset.html  ticket_form.html  ticket_index.html  ticket_update.html
tickets/tests/: test_forms.py  test_models.py  test_ticket_forms.py  test_views.py
ttsystem/: db.sqlite3  manage.py
ttsystem/tickets/: forms.py  models.py  tests.py  urls.py  views.py
ttsystem/ttsystem/: asgi.py  settings.py  urls.py  wsgi.py
unit_tests/: test_ConfigReader.py  test_TicketDF.py
(+42 files in other folders)
