[tool.poetry]
name = "grewtix"
version = "0.1.0"
description = "A Python project"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
model-bakery = "^1.4.0"
Django = "^4.0.3"
django-widget-tweaks = "^1.4.12"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
mypy = "^0.931"
flake8 = "^4.0.1"
pytest = "^7.0.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
